--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 license = "MIT/Apache-2.0"
 authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
 description = "Rust raw bindings for cr.h: A Simple C Hot Reload Header-only Library"
-keywords = ["live", "dynamic", "reload", "addins", "plugins", "sharedlibrary"]
+keywords = ["live", "dynamic", "reload", "addins", "plugins"]
 repository = "https://github.com/Neopallium/cr-sys"
 homepage = "https://github.com/Neopallium/cr-sys"
 edition = "2018"
